# zapmem

./: CMakeLists.txt  README.MD
include/arpa2/: zapmem.h
src/: zapmem.c
test/: testzap.c  wrap_dozapmem.c  wrap_nozapmem.c
